--- a/doc/design/tower-系统架构.graffle/data.plist
+++ b/doc/design/tower-系统架构.graffle/data.plist
@@ -53,6 +53,39 @@
 	<array>
 		<dict>
 			<key>Bounds</key>
+			<string>{{259.43802224251772, 373.67706529143265}, {47.89858697439692, 18}}</string>
+			<key>Class</key>
+			<string>ShapedGraphic</string>
+			<key>ID</key>
+			<integer>2020</integer>
+			<key>Magnets</key>
+			<array>
+				<string>{0, 1}</string>
+				<string>{0, -1}</string>
+			</array>
+			<key>Shape</key>
+			<string>SemiCircle</string>
+			<key>Style</key>
+			<dict>
+				<key>shadow</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+			</dict>
+			<key>Text</key>
+			<dict>
+				<key>Text</key>
+				<string>{\rtf1\ansi\ansicpg936\cocoartf1404\cocoasubrtf130
+\cocoascreenfonts1{\fonttbl\f0\fnil\fcharset134 STHeitiSC-Light;}
+{\colortbl;\red255\green255\blue255;}
+\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\pardirnatural\qc
+
+\f0\fs24 \cf0 \'c3\'c5\'bb\'a7}</string>
+			</dict>
+		</dict>
+		<dict>
+			<key>Bounds</key>
 			<string>{{492.69902383529364, 519.36609307768754}, {32.163528839207956, 36}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
@@ -1063,41 +1096,6 @@
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\pardirnatural\qc
 
 \f0\fs24 \cf0 \'bb\'ba\'b4\'e6\'b7\'fe\'ce\'f1}</string>
-			</dict>
-		</dict>
-		<dict>
-			<key>Bounds</key>
-			<string>{{258.43802452087402, 374.31633225920609}, {54.898594146116615, 18}}</string>
-			<key>Class</key>
-			<string>ShapedGraphic</string>
-			<key>ID</key>
-			<integer>1979</integer>
-			<key>Magnets</key>
-			<array>
-				<string>{0, 1}</string>
-				<string>{0, -1}</string>
-				<string>{1, 0}</string>
-				<string>{-1, 0}</string>
-			</array>
-			<key>Shape</key>
-			<string>Circle</string>
-			<key>Style</key>
-			<dict>
-				<key>shadow</key>
-				<dict>
-					<key>Draws</key>
-					<string>NO</string>
-				</dict>
-			</dict>
-			<key>Text</key>
-			<dict>
-				<key>Text</key>
-				<string>{\rtf1\ansi\ansicpg936\cocoartf1404\cocoasubrtf130
-\cocoascreenfonts1{\fonttbl\f0\fnil\fcharset134 STHeitiSC-Light;}
-{\colortbl;\red255\green255\blue255;}
-\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\pardirnatural\qc
-
-\f0\fs24 \cf0 \'bb\'ba\'b4\'e6}</string>
 			</dict>
 		</dict>
 		<dict>
@@ -2448,7 +2446,7 @@ web layyer}</string>
 	<key>MasterSheets</key>
 	<array/>
 	<key>ModificationDate</key>
-	<string>2015-12-22 09:38:29 +0000</string>
+	<string>2015-12-23 01:32:02 +0000</string>
 	<key>Modifier</key>
 	<string>alexzhu</string>
 	<key>NotesVisible</key>
@@ -2524,7 +2522,7 @@ web layyer}</string>
 		<key>ExpandedCanvases</key>
 		<array/>
 		<key>Frame</key>
-		<string>{{-1392, -75}, {855, 877}}</string>
+		<string>{{349, 0}, {855, 877}}</string>
 		<key>ListView</key>
 		<true/>
 		<key>OutlineWidth</key>
