--- a/doc/design/tower-系统架构.graffle/data.plist
+++ b/doc/design/tower-系统架构.graffle/data.plist
@@ -53,6 +53,197 @@
 	<array>
 		<dict>
 			<key>Bounds</key>
+			<string>{{192.8116455078125, 240.20748901367188}, {32, 11}}</string>
+			<key>Class</key>
+			<string>ShapedGraphic</string>
+			<key>FitText</key>
+			<string>YES</string>
+			<key>Flow</key>
+			<string>Resize</string>
+			<key>ID</key>
+			<integer>2024</integer>
+			<key>Magnets</key>
+			<array>
+				<string>{0, 1}</string>
+				<string>{0, -1}</string>
+				<string>{1, 0}</string>
+				<string>{-1, 0}</string>
+			</array>
+			<key>Shape</key>
+			<string>Subprocess</string>
+			<key>Style</key>
+			<dict>
+				<key>fill</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+				<key>shadow</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+				<key>stroke</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+			</dict>
+			<key>Text</key>
+			<dict>
+				<key>Text</key>
+				<string>{\rtf1\ansi\ansicpg936\cocoartf1404\cocoasubrtf130
+\cocoascreenfonts1{\fonttbl\f0\fnil\fcharset134 STHeiti;}
+{\colortbl;\red255\green255\blue255;}
+\deftab720
+\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\pardeftab720\ri-380\qc
+
+\f0\b\fs20 \cf0 \expnd0\expndtw0\kerning0
+HTTP}</string>
+				<key>VerticalPad</key>
+				<integer>0</integer>
+			</dict>
+			<key>TextRelativeArea</key>
+			<string>{{0, 0}, {1, 1}}</string>
+			<key>Wrap</key>
+			<string>NO</string>
+		</dict>
+		<dict>
+			<key>Bounds</key>
+			<string>{{114.47449807116288, 497.5028076171875}, {42.920719059691194, 36}}</string>
+			<key>Class</key>
+			<string>ShapedGraphic</string>
+			<key>ID</key>
+			<integer>2023</integer>
+			<key>Magnets</key>
+			<array>
+				<string>{0, 1}</string>
+				<string>{0, -1}</string>
+				<string>{1, 0}</string>
+				<string>{-1, 0}</string>
+			</array>
+			<key>Shape</key>
+			<string>Circle</string>
+			<key>Style</key>
+			<dict>
+				<key>shadow</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+			</dict>
+			<key>Text</key>
+			<dict>
+				<key>Text</key>
+				<string>{\rtf1\ansi\ansicpg936\cocoartf1404\cocoasubrtf130
+\cocoascreenfonts1{\fonttbl\f0\fnil\fcharset134 STHeitiSC-Light;}
+{\colortbl;\red255\green255\blue255;}
+\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\pardirnatural\qc
+
+\f0\fs24 \cf0 \'b9\'e6\'d4\'f2\'d2\'fd\'c7\'e6\
+\'b7\'fe\'ce\'f1}</string>
+			</dict>
+		</dict>
+		<dict>
+			<key>Bounds</key>
+			<string>{{115.75449208208818, 444}, {42.920719059691194, 36}}</string>
+			<key>Class</key>
+			<string>ShapedGraphic</string>
+			<key>ID</key>
+			<integer>2022</integer>
+			<key>Magnets</key>
+			<array>
+				<string>{0, 1}</string>
+				<string>{0, -1}</string>
+				<string>{1, 0}</string>
+				<string>{-1, 0}</string>
+			</array>
+			<key>Shape</key>
+			<string>Circle</string>
+			<key>Style</key>
+			<dict>
+				<key>shadow</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+			</dict>
+			<key>Text</key>
+			<dict>
+				<key>Text</key>
+				<string>{\rtf1\ansi\ansicpg936\cocoartf1404\cocoasubrtf130
+\cocoascreenfonts1{\fonttbl\f0\fnil\fcharset134 STHeitiSC-Light;}
+{\colortbl;\red255\green255\blue255;}
+\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\pardirnatural\qc
+
+\f0\fs24 \cf0 \'b9\'a4\'d7\'f7\'c1\'f7\
+\'b7\'fe\'ce\'f1}</string>
+			</dict>
+		</dict>
+		<dict>
+			<key>Bounds</key>
+			<string>{{105.15678004214067, 411.36607591154984}, {64.116145977310907, 144}}</string>
+			<key>Class</key>
+			<string>ShapedGraphic</string>
+			<key>ID</key>
+			<integer>2021</integer>
+			<key>Magnets</key>
+			<array>
+				<string>{1, 0.5}</string>
+				<string>{1, -0.5}</string>
+				<string>{-1, 0.5}</string>
+				<string>{-1, -0.5}</string>
+				<string>{0.5, 1}</string>
+				<string>{-0.5, 1}</string>
+				<string>{0.5, -1}</string>
+				<string>{-0.5, -1}</string>
+			</array>
+			<key>Shape</key>
+			<string>Rectangle</string>
+			<key>Style</key>
+			<dict>
+				<key>fill</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+				<key>shadow</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+				<key>stroke</key>
+				<dict>
+					<key>Cap</key>
+					<integer>0</integer>
+					<key>CornerRadius</key>
+					<real>5</real>
+					<key>Join</key>
+					<integer>0</integer>
+					<key>Pattern</key>
+					<integer>1</integer>
+				</dict>
+			</dict>
+			<key>Text</key>
+			<dict>
+				<key>Text</key>
+				<string>{\rtf1\ansi\ansicpg936\cocoartf1404\cocoasubrtf130
+\cocoascreenfonts1{\fonttbl\f0\fnil\fcharset134 STHeiti;}
+{\colortbl;\red255\green255\blue255;}
+\deftab720
+\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\pardeftab720\ri-380\qc
+
+\f0\b\fs20 \cf0 \expnd0\expndtw0\kerning0
+engine\
+layyer}</string>
+				<key>VerticalPad</key>
+				<integer>0</integer>
+			</dict>
+			<key>TextPlacement</key>
+			<integer>0</integer>
+		</dict>
+		<dict>
+			<key>Bounds</key>
 			<string>{{259.43802224251772, 373.67706529143265}, {47.89858697439692, 18}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
@@ -226,7 +417,7 @@
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{188.87072563171387, 481.3163150930684}, {42.920719059691194, 36}}</string>
+			<string>{{231.10115623474121, 497.50280705931596}, {42.920719059691194, 36}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
@@ -960,7 +1151,7 @@
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{239.97450566385214, 430.9959968710225}, {42.920719059691194, 36}}</string>
+			<string>{{283.5, 430.9959968710225}, {42.920719059691194, 36}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
@@ -995,7 +1186,7 @@
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{174.56969738380212, 429.2147239828389}, {42.920719059691194, 36}}</string>
+			<string>{{231.03162670509118, 432.2147239828389}, {42.920719059691194, 36}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
@@ -1030,7 +1221,7 @@
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{319.00000190734863, 429.81633225920609}, {42.920719059691194, 36}}</string>
+			<string>{{336.00000190734863, 430.81633225920609}, {42.920719059691194, 36}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
@@ -1842,7 +2033,7 @@ database layyer}</string>
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{319, 498.31635514738969}, {42.920719059691194, 36}}</string>
+			<string>{{335.79244995117188, 498.31635514738969}, {42.920719059691194, 36}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
@@ -1877,7 +2068,7 @@ database layyer}</string>
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{109.16489247271318, 425.56633225920609}, {42.920719059691194, 36}}</string>
+			<string>{{179.31355885454911, 430.99598924162797}, {42.920719059691194, 36}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
@@ -1912,7 +2103,7 @@ database layyer}</string>
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{253.93536472320557, 484.06633225920609}, {42.920719059691194, 36}}</string>
+			<string>{{286.33865451812744, 498.31633225920609}, {42.920719059691194, 36}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
@@ -1947,7 +2138,7 @@ database layyer}</string>
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{118.40986437027175, 481.31632844450883}, {42.920719059691194, 36}}</string>
+			<string>{{181, 498.31635896208695}, {42.920719059691194, 36}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
@@ -1982,7 +2173,7 @@ database layyer}</string>
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{99.753564419189161, 412.31633225920609}, {290.11614990234375, 144}}</string>
+			<string>{{173.31355885454911, 412.31633225920609}, {216.5561554669838, 144}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
@@ -2446,7 +2637,7 @@ web layyer}</string>
 	<key>MasterSheets</key>
 	<array/>
 	<key>ModificationDate</key>
-	<string>2015-12-23 01:32:02 +0000</string>
+	<string>2015-12-23 06:30:07 +0000</string>
 	<key>Modifier</key>
 	<string>alexzhu</string>
 	<key>NotesVisible</key>
