--- a/tower-config-maven-plugin/pom.xml
+++ b/tower-config-maven-plugin/pom.xml
@@ -15,6 +15,10 @@
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>com.tower.soafw</groupId>
+			<artifactId>tower-config</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-plugin-api</artifactId>
 			<version>${mavenVersion}</version>
