--- a/tower-exception-manager/pom.xml
+++ b/tower-exception-manager/pom.xml
@@ -18,6 +18,10 @@
         <spId>1</spId>
     </properties>
     <dependencies>
+    	<dependency>
+			<groupId>com.tower.soafw</groupId>
+			<artifactId>tower-config</artifactId>
+		</dependency>
         <dependency>
             <groupId>com.tower.soafw</groupId>
             <artifactId>tower-util</artifactId>
