新增Dto、Service、ServiceImpl 代码生成器

--- a/tower-config-maven-plugin/src/main/resources/META-INF/config/template/template.properties
+++ b/tower-config-maven-plugin/src/main/resources/META-INF/config/template/template.properties
@@ -44,19 +44,20 @@ dao.2=.md;README.md.dao;#{artifactId}/#{artifactId}-dao
 dao.3=.xml;acc.xml;#{artifactId}/#{artifactId}-dao/src/main/resources/META-INF/config/local
 dao.4=.properties;database.properties;#{artifactId}/#{artifactId}-dao/src/main/resources/META-INF/config/local
 dao.5=.xml;spring-dao.xml;#{artifactId}/#{artifactId}-dao/src/main/resources/META-INF/config/spring
-dao.6=.java;DaoGen.java;#{artifactId}/#{artifactId}-dao/src/test/java/com/#{company}/service/#{artifactId}/dao
+dao.6=.java;DaoGen.java;#{artifactId}/#{artifactId}-dao/src/test/java/com/#{company}/service/#{artifactId}
 dao.7=;SPID;#{artifactId}/#{artifactId}-dao/src/main/resources/META-INF
 #####################################
 
-domain=1
+domain=1;2
 domain.1=.xml;pom.xml.domain;#{artifactId}/#{artifactId}-domain
+domain.2=.java;DtoGen.java;#{artifactId}/#{artifactId}-domain/src/test/java/com/#{company}/service/#{artifactId}
 
 #####################################
 
-service=1;2;
+service=1;2;3
 service.1=.xml;pom.xml.svc;#{artifactId}/#{artifactId}-service
 service.2=.java;IHelloService.java;#{artifactId}/#{artifactId}-service/src/main/java/com/#{company}/service/#{artifactId}
-service.3=;SPID;#{artifactId}/#{artifactId}-service/src/main/resources/META-INF
+service.3=.java;ServiceGen.java;#{artifactId}/#{artifactId}-service/src/test/java/com/#{company}/service/#{artifactId}
 
 #####################################
 
@@ -74,7 +75,7 @@ mq.3=.xml;spring-mq.xml;#{artifactId}/#{artifactId}-mq/src/main/resources/META-I
 
 #####################################
 
-service-impl=1;2;3;4;5;6;7;8;9;10;11
+service-impl=1;2;3;4;5;6;7;8;9;10;11;12
 service-impl.1=.xml;pom.xml.svc.impl;#{artifactId}/#{artifactId}-service-impl
 service-impl.2=.md;README.md.service;#{artifactId}/#{artifactId}-service-impl
 service-impl.3=.xml;logback.xml.service;#{artifactId}/#{artifactId}-service-impl/src/main/resources
@@ -86,7 +87,7 @@ service-impl.8=.java;ServiceLogerAspect.java;#{artifactId}/#{artifactId}-service
 service-impl.9=.java;XCacheAspect.java;#{artifactId}/#{artifactId}-service-impl/src/main/java/com/#{company}/service/#{artifactId}/aop
 service-impl.10=.java;HelloServiceImpl.java;#{artifactId}/#{artifactId}-service-impl/src/main/java/com/#{company}/service/#{artifactId}/impl
 service-impl.11=.xml;dist.xml;#{artifactId}/#{artifactId}-service-impl/src/main/assemble
-
+service-impl.12=.java;ServiceGen.java.impl;#{artifactId}/#{artifactId}-service-impl/src/test/java/com/#{company}/service/#{artifactId}
 
 #####################################
 
