--- a/tower-domain/pom.xml
+++ b/tower-domain/pom.xml
@@ -14,6 +14,11 @@
 		<exception.enum.class>com.tower.soafw.dao.ibatis.IBatisDAOException</exception.enum.class>
 	</properties>
 
-	<dependencies />
+	<dependencies>
+		<dependency>
+			<groupId>com.tower.soafw</groupId>
+			<artifactId>tower-util</artifactId>
+		</dependency>
+	</dependencies>
 		
 </project>
