调整service 生成器

--- a/tower-config-maven-plugin/src/main/resources/META-INF/config/template/template.properties
+++ b/tower-config-maven-plugin/src/main/resources/META-INF/config/template/template.properties
@@ -48,16 +48,14 @@ dao.6=.java;DaoGen.java;#{artifactId}/#{artifactId}-dao/src/test/java/com/#{comp
 dao.7=;SPID;#{artifactId}/#{artifactId}-dao/src/main/resources/META-INF
 #####################################
 
-domain=1;2
+domain=1
 domain.1=.xml;pom.xml.domain;#{artifactId}/#{artifactId}-domain
-domain.2=.java;DtoGen.java;#{artifactId}/#{artifactId}-domain/src/test/java/com/#{company}/service/#{artifactId}
 
 #####################################
 
-service=1;2;3
+service=1;2
 service.1=.xml;pom.xml.svc;#{artifactId}/#{artifactId}-service
 service.2=.java;IHelloService.java;#{artifactId}/#{artifactId}-service/src/main/java/com/#{company}/service/#{artifactId}
-service.3=.java;ServiceGen.java;#{artifactId}/#{artifactId}-service/src/test/java/com/#{company}/service/#{artifactId}
 
 #####################################
 
