调整项目框架模版，生成SPID文件到项目util包中

--- a/tower-config-maven-plugin/src/main/resources/META-INF/config/template/template.properties
+++ b/tower-config-maven-plugin/src/main/resources/META-INF/config/template/template.properties
@@ -1,6 +1,6 @@
 
-#smodules=root;common;config;cache;dao;domain;service;mq;rpc;job;web;service-impl
-modules=root;common;cache;dao;domain;service;mq;rpc;job;web;service-impl
+#smodules=root;util;config;cache;dao;domain;service;mq;rpc;job;web;service-impl
+modules=root;util;cache;dao;domain;service;mq;rpc;job;web;service-impl
 
 #a=sufix;template;dir;...
 root=1;2;3;4;5;6;7;8;9;10
@@ -17,8 +17,9 @@ root.10=.xml;webapp.xml;#{artifactId}/config
 
 #####################################
 
-common=1
-common.1=.xml;pom.xml.util;#{artifactId}/#{artifactId}-util
+util=1;2
+util.1=.xml;pom.xml.util;#{artifactId}/#{artifactId}-util
+util.2=;SPID;#{artifactId}/#{artifactId}-util/src/main/resources/META-INF
 
 #####################################
 
@@ -38,14 +39,13 @@ cache.6=.xml;spring-cache.xml;#{artifactId}/#{artifactId}-cache/src/main/resourc
 
 #####################################
 
-dao=1;2;3;4;5;6;7
+dao=1;2;3;4;5;6
 dao.1=.xml;pom.xml.dao;#{artifactId}/#{artifactId}-dao
 dao.2=.md;README.md.dao;#{artifactId}/#{artifactId}-dao
 dao.3=.xml;acc.xml;#{artifactId}/#{artifactId}-dao/src/main/resources/META-INF/config/local
 dao.4=.properties;database.properties;#{artifactId}/#{artifactId}-dao/src/main/resources/META-INF/config/local
 dao.5=.xml;spring-dao.xml;#{artifactId}/#{artifactId}-dao/src/main/resources/META-INF/config/spring
 dao.6=.java;DaoGen.java;#{artifactId}/#{artifactId}-dao/src/test/java/com/#{company}/service/#{artifactId}
-dao.7=;SPID;#{artifactId}/#{artifactId}-dao/src/main/resources/META-INF
 #####################################
 
 domain=1
