--- a/pom.xml
+++ b/pom.xml
@@ -461,12 +461,12 @@
 	<distributionManagement>
 		<repository>
 			<id>nexus-releases</id>
-			<url>http://maven.corp.tower.com:8081/nexus/content/repositories/releases</url>
+			<url>http://mvn.leya.com/content/repositories/releases</url>
 		</repository>
 
 		<snapshotRepository>
 			<id>nexus-snapshots</id>
-			<url>http://maven.corp.tower.com:8081/nexus/content/repositories/snapshots</url>
+			<url>http://mvn.leya.com/content/repositories/snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
 	<name>tower</name>
