--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
 		<unirest-java.version>1.3.26</unirest-java.version>
 		<xstream.version>1.4.8</xstream.version>
 		<ognl.version>3.0.3</ognl.version>
+		<zookeeper.version>3.4.6</zookeeper.version>
 	</properties>
 
 	<modules>
@@ -85,6 +86,7 @@
 		<module>tower-concurrent</module>
 		<module>tower-mq</module>
 		<module>tower-rpc</module>
+		<module>tower-rule</module>
 		<module>tower-domain</module>
 		<module>tower-service</module>
 		<module>tower-service-impl</module>
@@ -376,6 +378,23 @@
 				<artifactId>unirest-java</artifactId>
 				<version>${unirest-java.version}</version>
 			</dependency>
+
+			<dependency>
+				<groupId>org.apache.zookeeper</groupId>
+				<artifactId>zookeeper</artifactId>
+				<version>${zookeeper.version}</version>
+				<exclusions>
+					<exclusion>
+						<artifactId>slf4j-log4j12</artifactId>
+						<groupId>org.slf4j</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>log4j</artifactId>
+						<groupId>log4j</groupId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+
 			<!-- springsecurity start -->
 			<dependency>
 				<groupId>org.springframework.security</groupId>
