调整model 字段名 支持 驼峰机制

--- a/tower-rule/pom.xml
+++ b/tower-rule/pom.xml
@@ -20,6 +20,10 @@
 			<groupId>com.tower.soafw</groupId>
 			<artifactId>tower-concurrent</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.tower.soafw</groupId>
+			<artifactId>tower-domain</artifactId>
+		</dependency>
 		<!-- 
 		<dependency>
 			<groupId>org.drools</groupId>
