--- a/tower-service-impl/pom.xml
+++ b/tower-service-impl/pom.xml
@@ -18,10 +18,13 @@
 			<groupId>com.tower.soafw</groupId>
 			<artifactId>tower-dao</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>com.tower.soafw</groupId>
 			<artifactId>tower-service</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.tower.soafw</groupId>
+			<artifactId>tower-rule</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
