新增rule 模版实现

--- a/tower-config-maven-plugin/src/main/resources/META-INF/config/template/template.properties
+++ b/tower-config-maven-plugin/src/main/resources/META-INF/config/template/template.properties
@@ -73,7 +73,7 @@ mq.3=.xml;spring-mq.xml;#{artifactId}/#{artifactId}-mq/src/main/resources/META-I
 
 #####################################
 
-service-impl=1;2;3;4;5;6;7;8;9;10;11;12
+service-impl=1;2;3;4;5;6;7;8;9;10;11;12;13;14
 service-impl.1=.xml;pom.xml.svc.impl;#{artifactId}/#{artifactId}-service-impl
 service-impl.2=.md;README.md.service;#{artifactId}/#{artifactId}-service-impl
 service-impl.3=.xml;logback.xml.service;#{artifactId}/#{artifactId}-service-impl/src/main/resources
@@ -86,6 +86,8 @@ service-impl.9=.java;XCacheAspect.java;#{artifactId}/#{artifactId}-service-impl/
 service-impl.10=.java;HelloServiceImpl.java;#{artifactId}/#{artifactId}-service-impl/src/main/java/com/#{company}/service/#{artifactId}/impl
 service-impl.11=.xml;dist.xml;#{artifactId}/#{artifactId}-service-impl/src/main/assemble
 service-impl.12=.java;ServiceGen.java.impl;#{artifactId}/#{artifactId}-service-impl/src/test/java/com/#{company}/service/#{artifactId}
+service-impl.13=.xml;kmodule.xml;;#{artifactId}/#{artifactId}-service-impl/src/main/resources/META-INF
+service-impl.14=.drl;HelloWorld.drl;;#{artifactId}/#{artifactId}-service-impl/src/main/resources/org/drools/examples/helloworld
 
 #####################################
 
