add  jest client 4 es

--- a/tower-mq/pom.xml
+++ b/tower-mq/pom.xml
@@ -18,7 +18,10 @@
 			<groupId>com.tower.soafw</groupId>
 			<artifactId>tower-concurrent</artifactId>
 		</dependency>
-		
+		<dependency>
+			<groupId>com.tower.soafw</groupId>
+			<artifactId>tower-domain</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>com.rabbitmq</groupId>
 			<artifactId>amqp-client</artifactId>
