--- a/tower-rpc/pom.xml
+++ b/tower-rpc/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.tower.soafw</groupId>
@@ -18,7 +19,10 @@
 			<groupId>com.tower.soafw</groupId>
 			<artifactId>tower-concurrent</artifactId>
 		</dependency>
-		
+		<dependency>
+			<groupId>com.tower.soafw</groupId>
+			<artifactId>tower-domain</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
@@ -36,12 +40,17 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.2.5</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.jvnet.hudson.dom4j</groupId>
 			<artifactId>dom4j</artifactId>
 			<version>1.6.1-hudson-3</version>
-     </dependency>
+		</dependency>
+		<dependency>
+			<groupId>io.searchbox</groupId>
+			<artifactId>jest</artifactId>
+			<version>2.0.0</version>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
