--- a/tower-rpc/pom.xml
+++ b/tower-rpc/pom.xml
@@ -47,6 +47,11 @@
 			<version>1.6.1-hudson-3</version>
 		</dependency>
 		<dependency>
+			<groupId>org.elasticsearch</groupId>
+			<artifactId>elasticsearch</artifactId>
+			<version>2.3.3</version>
+		</dependency>
+		<dependency>
 			<groupId>io.searchbox</groupId>
 			<artifactId>jest</artifactId>
 			<version>2.0.0</version>
