--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,7 @@
 		<unirest-java.version>1.3.26</unirest-java.version>
 		<xstream.version>1.4.8</xstream.version>
 		<zookeeper.version>3.4.6</zookeeper.version>
+		<javassist.version>3.12.0.GA</javassist.version>
 	</properties>
 
 	<modules>
@@ -224,7 +225,11 @@
 				<artifactId>junit</artifactId>
 				<version>${junit.version}</version>
 			</dependency>
-
+			<dependency>
+				<groupId>javassist</groupId>
+				<artifactId>javassist</artifactId>
+				<version>${javassist.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>javax.mail</groupId>
 				<artifactId>mail</artifactId>
@@ -419,7 +424,7 @@
 				<artifactId>xstream</artifactId>
 				<version>${xstream.version}</version>
 			</dependency>
-			
+
 			<!-- springsecurity end -->
 		</dependencies>
 	</dependencyManagement>
