--- a/tower-service/pom.xml
+++ b/tower-service/pom.xml
@@ -76,6 +76,10 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+			<groupId>javassist</groupId>
+			<artifactId>javassist</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
