去除dubbo javassist 依赖

--- a/tower-service/pom.xml
+++ b/tower-service/pom.xml
@@ -77,6 +77,10 @@
 					<artifactId>spring-aop</artifactId>
 					<groupId>org.springframework</groupId>
 				</exclusion>
+				<exclusion>
+					<artifactId>javassist</artifactId>
+					<groupId>org.javassist</groupId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
