--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
 		<unirest-java.version>1.3.26</unirest-java.version>
 		<xstream.version>1.4.8</xstream.version>
 		<zookeeper.version>3.4.6</zookeeper.version>
-		<javassist.version>3.12.0.GA</javassist.version>
+		<javassist.version>3.15.0-GA</javassist.version>
 	</properties>
 
 	<modules>
