chg javassist groupId  2 org.javassist

--- a/tower-service/pom.xml
+++ b/tower-service/pom.xml
@@ -84,8 +84,8 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>javassist</groupId>
 			<artifactId>javassist</artifactId>
+			<groupId>org.javassist</groupId>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
