--- a/pom.xml
+++ b/pom.xml
@@ -226,8 +226,8 @@
 				<version>${junit.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>javassist</groupId>
 				<artifactId>javassist</artifactId>
+				<groupId>org.javassist</groupId>
 				<version>${javassist.version}</version>
 			</dependency>
 			<dependency>
@@ -257,13 +257,13 @@
 				<artifactId>commons-pool</artifactId>
 				<version>${commons-pool.version}</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-pool2</artifactId>
 				<version>${commons-pool2.version}</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>commons-dbcp</groupId>
 				<artifactId>commons-dbcp</artifactId>
